fix: Fix mobile profile sizing, faq collapse, registration questions

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -309,7 +309,7 @@ a.link {
   to { transform: rotate(0deg); }
 }
 
-*::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background-color: transparent;
   width: 25px;
 }
@@ -317,7 +317,7 @@ a.link {
 ::-webkit-scrollbar {
   width: 25px;
 }
-*::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background:rgba(0, 0, 0, 0) url('/assets/ToborScroll.png') no-repeat;
   background-size:25px 30px;  
   display: block;
